--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    #"kaithem>=0.86.3",
+    "kaithem>=0.87.0",
     "kaithem",
     "datasette>=1.0a16",
     "datasette-write",
