--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "kaithem-plugin-datasette"
 version = "0.1.2"
 description = "Add your description here"
 readme = "README.md"
+license = "GPL-3.0-or-later"
 requires-python = ">=3.10"
 dependencies = [
     "kaithem>=0.93.0",
